fix select input overlaps value on mobile

--- a/src/components/Slider/Slider.module.less
+++ b/src/components/Slider/Slider.module.less
@@ -25,8 +25,13 @@
   position: relative;
 
   input {
-    padding-right: 24px;
     height: 38px;
+    min-width: 40px;
+    padding-right: 22px;
+
+    @media (max-width: 640px) {
+      padding: 8px 4px;
+    }
   }
 }
 
